@@ -3,7 +3,8 @@
   * Add support for "DB_SEQUENCE->stat_print()". The binding
     support for "DB_SEQUENCE" is now complete.
   * Add support for "DB_ENV->txn_stat_print()".
-
+  * Add support for "DB_ENV->get_timeout()".
+  * Document that "DB_ENV->txn_stat()" accepts a flag.
 
 4.7.4:
   * Under Python 3.0, "bsddb.db.DB_VERSION_STRING",
